# slicksmith-ttom

./: README.md  main.py  pyproject.toml
cluster/: ctc.sh
scripts/: utils.py  vis_folium.py
src/: concurrent_download.py  download.py  main.py  utils.py
src/deep_learning/: BalancedRandomGeoSampler.py
src/slicksmith_ttom/: __init__.py  download.py  main.py  vis.py
src/slicksmith_ttom/deep_learning/: BalancedRandomGeoSampler.py  __init__.py  torchgeo_datasets.py  utils.py
src/trujillo_dataprocessing/: __init__.py  download.py  main.py  utils.py  vis.py
src/trujillo_dataprocessing/deep_learning/: BalancedRandomGeoSampler.py  __init__.py  torchgeo_datasets.py
src/trujillo_dataprocessing/preprocessing/: add_georef_and_timestamps.py
