[project]
name = "slicksmith-ttom"
version = "0.1.1"
description = "Add your description here"
authors = [{ name = "Halyjo", email = "harald.l.joakimsen@uit.no" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.5",
    "ipykernel>=6.29.5",
    "ipynb>=0.5.1",
    "lightning>=2.4",
    "py7zr>=0.22.0",
    "rasterio>=1.4.3",
    "torch>=2.7.0",
    "torchgeo>=0.7.0",
    "torchshow>=0.5.2",
    "typed-argument-parser",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]
